@@ -1,0 +1,228 @@
+/*
+ * Created on Oct 8, 2007
+ */
+package org.griphyn.vdl.karajan.lib.swiftscript;
+
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileReader;
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.Set;
+
+import org.apache.log4j.Logger;
+import org.globus.cog.karajan.arguments.Arg;
+import org.globus.cog.karajan.stack.VariableStack;
+import org.globus.cog.karajan.workflow.ExecutionException;
+import org.griphyn.vdl.karajan.lib.VDLFunction;
+import org.griphyn.vdl.mapping.AbsFile;
+import org.griphyn.vdl.mapping.DSHandle;
+import org.griphyn.vdl.mapping.HandleOpenException;
+import org.griphyn.vdl.mapping.InvalidPathException;
+import org.griphyn.vdl.mapping.Path;
+import org.griphyn.vdl.mapping.PhysicalFormat;
+import org.griphyn.vdl.type.Type;
+import org.griphyn.vdl.type.Types;
+
+public class ReadData extends VDLFunction {
+	public static final Logger logger = Logger.getLogger(ReadData.class);
+
+	public static final Arg DEST = new Arg.Positional("dest");
+	public static final Arg SRC = new Arg.Positional("src");
+	public static boolean warning;
+
+	static {
+		setArguments(ReadData.class, new Arg[] { DEST, SRC });
+	}
+
+	protected Object function(VariableStack stack) throws ExecutionException, HandleOpenException {
+		DSHandle dest = (DSHandle) DEST.getValue(stack);
+		DSHandle src = (DSHandle) SRC.getValue(stack);
+		waitFor(stack, src);
+		if (src.getType().equals(Types.STRING)) {
+			readData(dest, (String) src.getValue());
+		}
+		else {
+			PhysicalFormat pf = src.getMapper().map(Path.EMPTY_PATH);
+			if (pf instanceof AbsFile) {
+				AbsFile af = (AbsFile) pf;
+				if (!af.getProtocol().equalsIgnoreCase("file")) {
+					throw new ExecutionException("readData only supports local files");
+				}
+				readData(dest, af.getPath());
+			}
+			else {
+				throw new ExecutionException("readData only supports reading from files");
+			}
+		}
+		return null;
+	}
+
+	private void readData(DSHandle dest, String path) throws ExecutionException {
+		File f = new File(path);
+		try {
+			BufferedReader br = new BufferedReader(new FileReader(f));
+			try {
+				if (dest.getType().isArray()) {
+					// each line is an item
+					readArray(dest, br);
+				}
+				else if (dest.getType().isPrimitive()) {
+					readPrimitive(dest, br);
+				}
+				else {
+					// struct
+					readStruct(dest, br);
+				}
+				dest.closeDeep();
+			}
+			finally {
+				try {
+					br.close();
+				}
+				catch (IOException e) {
+					e.printStackTrace();
+				}
+			}
+		}
+		catch (IOException e) {
+			throw new ExecutionException(e);
+		}
+	}
+
+	private void readPrimitive(DSHandle dest, BufferedReader br) throws IOException,
+			ExecutionException {
+		StringBuffer sb = new StringBuffer();
+		String line = br.readLine();
+		while (line != null) {
+			sb.append(line);
+			line = br.readLine();
+		}
+		String s = sb.toString();
+		setValue(dest, s);
+	}
+
+	private void readArray(DSHandle dest, BufferedReader br) throws IOException, ExecutionException {
+		if (dest.getType().itemType().isPrimitive()) {
+			readPrimitiveArray(dest, br);
+		}
+		else {
+			readStructArray(dest, br);
+		}
+	}
+
+	private void readPrimitiveArray(DSHandle dest, BufferedReader br) throws IOException,
+			ExecutionException {
+		int index = 0;
+		String line = br.readLine();
+		try {
+			while (line != null) {
+				DSHandle child = dest.getField(Path.EMPTY_PATH.addLast(String.valueOf(index), true));
+				setValue(child, line);
+				line = br.readLine();
+				index++;
+			}
+		}
+		catch (InvalidPathException e) {
+			throw new ExecutionException(e);
+		}
+	}
+
+	private void readStructArray(DSHandle dest, BufferedReader br) throws IOException,
+			ExecutionException {
+		String[] header = readStructHeader(dest.getType().itemType(), br);
+		int index = 0;
+		String line = br.readLine();
+		try {
+			while (line != null) {
+				line = line.trim();
+				if (!line.equals("")) {
+					DSHandle child = dest.getField(Path.EMPTY_PATH.addLast(String.valueOf(index),
+							true));
+					readStruct(child, line, header);
+					index++;
+				}
+				line = br.readLine();
+			}
+		}
+		catch (InvalidPathException e) {
+			throw new ExecutionException(e);
+		}
+	}
+
+	private String[] readStructHeader(Type type, BufferedReader br) throws ExecutionException,
+			IOException {
+		String line = br.readLine();
+		if (line == null) {
+			throw new ExecutionException("Missing header");
+		}
+		else {
+			String[] header = line.split("\\s+");
+			Set t = new HashSet(type.getFieldNames());
+			Set h = new HashSet(Arrays.asList(header));
+			if (!t.equals(h)) {
+				throw new ExecutionException("File header does not match type. "
+						+ "Expected the following header items (in no particular order): " + t
+						+ ". Instead, the header was (again, in no particular order): " + h);
+			}
+			return header;
+		}
+	}
+
+	private void readStruct(DSHandle dest, String line, String[] header) throws ExecutionException {
+		String[] cols = line.split("\\s+");
+		try {
+			if (cols.length != header.length) {
+				throw new ExecutionException("Column count for line \"" + line
+						+ "\" does not match the header column count of " + header.length);
+			}
+			else {
+
+				for (int i = 0; i < cols.length; i++) {
+					DSHandle child = dest.getField(Path.EMPTY_PATH.addLast(header[i]));
+					setValue(child, cols[i]);
+				}
+			}
+		}
+		catch (InvalidPathException e) {
+			throw new ExecutionException(e);
+		}
+	}
+
+	private void readStruct(DSHandle dest, BufferedReader br) throws ExecutionException,
+			IOException {
+		String[] header = readStructHeader(dest.getType(), br);
+		String line = br.readLine();
+		if (line == null) {
+			throw new ExecutionException("Missing values");
+		}
+		else {
+			readStruct(dest, line, header);
+		}
+	}
+
+	private void setValue(DSHandle dest, String s) throws ExecutionException {
+		try {
+
+			if (dest.getType().equals(Types.INT)) {
+				dest.setValue(new Double(Integer.parseInt(s.trim())));
+			}
+			else if (dest.getType().equals(Types.FLOAT)) {
+				dest.setValue(new Double(s.trim()));
+			}
+			else if (dest.getType().equals(Types.BOOLEAN)) {
+				dest.setValue(new Boolean(s.trim()));
+			}
+			else if (dest.getType().equals(Types.STRING)) {
+				dest.setValue(s);
+			}
+			else {
+				throw new ExecutionException("Don't know how to read type " + dest.getType());
+			}
+		}
+		catch (NumberFormatException e) {
+			throw new ExecutionException("Could not convert value to number: " + s);
+		}
+	}
+}
